SERVER-79202 Prevent PinnedConnectionExecutor from destroying itself